--- a/web/package.json
+++ b/web/package.json
@@ -7,26 +7,32 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "typechain --target=ethers-v5 ./contractAbi/**/*.abi"
+    "postinstall": "typechain --target=ethers-v5 ./contractAbi/**/*.abi; graphql-codegen",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@maticnetwork/maticjs": "^3.4.0",
     "@maticnetwork/walletconnect-provider": "^0.0.1-beta.1",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@typechain/ethers-v5": "^10.1.0",
     "ethers": "^5.7.1",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.18.0",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "siwe": "^1.1.6",
     "typechain": "^8.1.0",
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.12.1",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
