--- a/web/package.json
+++ b/web/package.json
@@ -11,18 +11,22 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@maticnetwork/maticjs": "^3.4.0",
     "@maticnetwork/walletconnect-provider": "^0.0.1-beta.1",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@typechain/ethers-v5": "^10.1.0",
+    "@types/ramda": "^0.28.15",
     "ethers": "^5.7.1",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "next-themes": "^0.2.1",
+    "rambda": "^7.2.1",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
