--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,14 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@maticnetwork/maticjs": "^3.4.0",
     "@maticnetwork/walletconnect-provider": "^0.0.1-beta.1",
+    "@mui/lab": "^5.0.0-alpha.100",
+    "@mui/material": "^5.10.6",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@typechain/ethers-v5": "^10.1.0",
