--- a/web/package.json
+++ b/web/package.json
@@ -29,11 +29,14 @@
     "next": "12.3.0",
     "next-auth": "^4.10.3",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^3.1.0",
     "rambda": "^7.2.1",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
+    "react-qr-code": "^2.0.8",
     "react-query": "^3.39.2",
     "siwe": "^1.1.6",
     "typechain": "^8.1.0",
