connect ipfs and minting

--- a/web/package.json
+++ b/web/package.json
@@ -20,9 +20,11 @@
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.6",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@pinata/sdk": "^1.1.26",
     "@rainbow-me/rainbowkit": "^0.5.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@types/ramda": "^0.28.15",
+    "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
